# bot-coin2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
bot/: __init__.py  bot_telegram.py  messages.py
price/: __init__.py  app.py
